Fixes on mobile

--- a/src/latest-landing/home/OurStory/ImageBox/ImageBox.scss
+++ b/src/latest-landing/home/OurStory/ImageBox/ImageBox.scss
@@ -15,8 +15,7 @@
         width: 100%;
         top: 0;
         position: relative;
-        // height: 211px;
-        height: 100vh;
+        height: 241px;
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
